src/objects/SPE2_Question_Survey_Association__c.object
<CustomObject>
    <fields>
        <fullName>AnswerType__c</fullName>
        <label>Answer Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Data</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>SPE2_Question_Survey_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIFrequency__c</fullName>
        <label>PI Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Data_Sequential_ID__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ PIData__r.Id , PIData__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PI Data Sequential ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Stage__c</fullName>
        <formula>IF(ISPICKVAL(PIData__r.LifecycleStage__c,&quot;Draft&quot;),&quot;Draft&quot;,
IF(ISPICKVAL(PIData__r.LifecycleStage__c,&quot;Published&quot;),&quot;Published&quot;,			IF(ISPICKVAL(PIData__r.LifecycleStage__c,&quot;Pilot&quot;),&quot;Pilot&quot;,&quot;Obsolete&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PI Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionID__c</fullName>
        <label>Question ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionLabel__c</fullName>
        <label>Question Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipName>SPE2_Question_Survey_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SPE2_Question_Survey_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <label>Survey Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyRespondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE2_Survey Respondent</label>
        <referenceTo>SPE2_Survey_Respondents__c</referenceTo>
        <relationshipName>SPE2_Question_Survey_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <formula>Question_Bank__r.SurveyQuestion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SurveyQuestion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Sequential_ID__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Survey__r.Id , Survey__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Sequential ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Stage__c</fullName>
        <formula>IF(ISPICKVAL(Survey__r.Stage__c ,&quot;Draft&quot;),&quot;Draft&quot;,
   IF(ISPICKVAL(Survey__r.Stage__c ,&quot;Published&quot;),&quot;Published&quot;,&quot;Obsolete&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Title__c</fullName>
        <formula>Survey__r.Survey_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>SPE2Survey__c</referenceTo>
        <relationshipLabel>PI Data</relationshipLabel>
        <relationshipName>SPE2_Question_Survey_Association</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ordernumber__c</fullName>
        <label>ordernumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SPE2_Question_Survey_Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Survey-Ques-{0000}</displayFormat>
        <label>SPE2 Question Survey Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>